username-distribution/usertool/01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: get-a-username
  name: get-a-username
  namespace: workshop-guide
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: get-a-username
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: get-a-username
    spec:
      containers:
      - name: get-a-username
        securityContext:
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
        image: quay.io/openshiftlabs/username-distribution@sha256:d9e1770fbc92f540d19cdceb830fa18ea0d2c31e2fa52685d3e19543131ed662
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
