username-distribution/usertool/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: workshop-guide
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: redis
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: redis
    spec:
      containers:
      - name: redis
        image: quay.io/openshiftlabs/username-distribution@sha256:d9e1770fbc92f540d19cdceb830fa18ea0d2c31e2fa52685d3e19543131ed662
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
