username-distribution/usertool/02-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: get-a-username
  name: get-a-username
  namespace: workshop-guide
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: get-a-username
  type: ClusterIP
