username-distribution/usertool/03-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: get-a-username
  name: get-a-username
  namespace: workshop-guide
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: get-a-username
    weight: 100
  wildcardPolicy: None
